test/files/invalid/union_vector.fbs
union Foo {}
table Bar {
  foos: [Foo];
}