test/files/invalid/union_vector.stderr
error: Unsupported type
  ┌─ test/files/invalid/union_vector.fbs:3:10
  │
3 │   foos: [Foo];
  │          ^^^ Unions in vectors are not currently supported

Error: Bailing because of errors
